# projects_roadmap.sh

./: README.md
backend/task_tracker_cli/: README.md  pyproject.toml  requirements.txt
backend/task_tracker_cli/src/cli/: __init__.py  core.py  tasks.py  types.py
backend/task_tracker_cli/src/controllers/: tasks.py
backend/task_tracker_cli/src/models/: task.py
backend/task_tracker_cli/src/services/: base_repo.py  repo.py
