[project]
name = "task_tracker_cli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Romaniv1912", email = "romaniv1912@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "tabulate>=0.9.0",
    "pydantic>=2.10.2",
    "click-default-group>=1.2.4",
    "ruff>=0.8.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
